--- a/template/template.html
+++ b/template/template.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <title></title>
   <link rel="stylesheet" href="style.css" />
+  <script src="togle.js"></script>
   <script></script>
 </head>
 <body>
